# berry-flux-diag

./: .gitignore  README.md  pyproject.toml
BerryFluxDiag/: Overlaps.py  QEParser.py  VASPParser.py  VASPParser_old.py  berry_flux_diag.py  preprocess.py  utils.py
automated_calcs/: bfd_jobs.py  bfd_maker.py  context.py  example_add_material_using_bfd_maker.py
preprocess_QE_input/: preprocess_example.py  preprocess_example_qe_in_to_qe_in_FeBiO3.py  preprocess_example_vasp_poscar_to_qe_in_CrO3.py  preprocess_funcs.py
preprocess_QE_input/CrO3_fe_db_cells/: CrO3_np_trans_1_k777_scf_nosym.in  CrO3_pol_orig_k777_scf_nosym.in  POSCAR_np_orig  POSCAR_np_trans_1  POSCAR_pol_orig
preprocess_QE_input/FeBiO3_AFM_cells/: FeBiO3_AFM_k555_np_orig_scf_u_3.in  FeBiO3_AFM_k555_np_trans_scf_u_3_nosym.in  FeBiO3_AFM_k555_pol_orig_scf_u_3.in  FeBiO3_AFM_k555_pol_orig_scf_u_3_nosym.in
src/berry_flux_diag/: BFDJobs.py  BFDMaker.py  Overlaps.py  QEParser.py  VASPParser.py  VASPParser_unnormalized.py  __init__.py  preprocess.py  utils.py
tests/: FeBiO3_AFM_debug.ipynb  context.py  test_BaTiO3_QE_no_spin_polarization.py
tests/BaTiO3_QE_IO_nospin/non_pol/: batio3_np.in  batio3_np.out
tests/BaTiO3_QE_IO_nospin/pol/: batio3_pol.in  batio3_pol.out  batio3_pol.xml
tutorials/: context.py  postprocess_DFT_files.ipynb  preprocess_DFT_files.ipynb  preprocess_QE_files.ipynb  preprocess_io.ipynb
tutorials/QE_io_files/: BaTiO3_np_trans_k555_scf_nosym.in  BaTiO3_pol_orig_k555_scf_nosym.in
tutorials/VASP_io_files/: POSCAR_BaTiO3_np_trans  POSCAR_BaTiO3_pol_orig
(+253 files in other folders)
